# gst-conan

./: .gitignore  README.md  gst-conan  readme.md  test.py
.github/: codeowners
config/: packages.json
distros/ubuntu-18.04/: Dockerfile  debians-build.txt  debians-run.txt
doc/: debian-package-quest.md  legal-disclaimer.md  machine-setup.md  roadmap.md  setup-ubuntu.md
dockers/: readme.md
dockers/ubuntu-18.04/: Dockerfile
examples/: .gitignore
examples/consume-ges/: conanfile.py  readme.md
examples/consume-ges-cmake/: CMakeLists.txt  conanfile.py  readme.md
examples/consume-ges-cmake/source/include/: consume-ges.h
examples/consume-ges-meson/: conanfile.py  meson.build  readme.md
examples/consume-ges-meson/source/src/: main.cpp
examples/consume-ges/source/: meson.build
examples/consume-ges/source/src/: main.cpp
gst_conan/: __init__.py  base.py  build.py  commands.py  readme.md
